# SmartDoor

./: CMakeLists.txt  README.md
app/: CMakeLists.txt
app/include/: direction.h  display_handler.h  door_handler.h  pru.h  rfid_handler.h  rfid_logger.h  shared_data_struct.h  udp_listener.h  utils.h
app/src/: display_handler.c  door_handler.c  main.c  pru.c  rfid_handler.c  rfid_logger.c  udp_listener.c  utils.c
hal/include/hal/: RFIDReader_data.h  buzzer.h  display.h  joystick.h  motion_sensor.h  neopixel.h  rfid.h  servo.h  uptime.h
hal/src/: GPIO.c  RFIDReader.c  SPI.c  SystemTools.c  buzzer.c  display.c  joystick.c  motion_sensor.c  neopixel.c  rfid.txt  servo.c  uptime.c
pru-embedoors/: CMakeLists.txt  Makefile  main.c  shared_data_struct.h
server/: package.json  server.js
server/lib/: udp_server.js
server/public/: index.html
server/public/javascripts/: udp_ui.js
server/public/stylesheets/: style.css
